# FileIndexer

./: CMakeLists.txt  CMakePresets.json  FileIndexer.sln  FileIndexer.vcxproj  README.md  launch.vs.json  main.c
include/: indexer.h  os_includes.h  string_array.h  utility.h
src/: main.c
src/Arrays/: string_array.c
src/Indexer/: indexer.c
src/Utils/: utility.c
